...
                          horizontal: 20.0, vertical: 15.0),
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          Expanded(
                            child: Container(
                                key: Key('employeeOne'),
                                height: 450,
                                decoration: BoxDecoration(
                                  borderRadius: BorderRadius.circular(20),
                                  color: Color.fromARGB(255, 232, 232, 232),
                                  boxShadow: [
                                    BoxShadow(
...
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Expanded(
                          child: GestureDetector(
                            key: Key('factoryOneSelection'),
                            onTap: () {
                              setState(() {
                                currSelection = 1;
                              });
                            },
                            child: factoryOneSelection(),
                          ),
                        ),
                        Expanded(
                          child: GestureDetector(
                            key: Key('factoryTwoDiselection'),
                            onTap: () {
                              setState(() {
                                currSelection = 2;
                              });
                            },
                            child: factoryTwoDiselection(),
...
                          horizontal: 20.0, vertical: 15.0),
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          Expanded(
                            child: Container(
                                key: Key('employeeTwo'),
                                height: 450,
                                decoration: BoxDecoration(
                                  borderRadius: BorderRadius.circular(20),
                                  color: Color.fromARGB(255, 232, 232, 232),
                                  boxShadow: [
                                    BoxShadow(
...
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Expanded(
                          child: GestureDetector(
                            key: Key('factoryOneDiselection'),
                            onTap: () {
                              setState(() {
                                currSelection = 1;
                              });
                            },
                            child: factoryOneDiselection(),
                          ),
                        ),
                        Expanded(
                          child: GestureDetector(
                            key: Key('factoryTwoSelection'),
                            onTap: () {
                              setState(() {
                                currSelection = 2;
                              });
                            },
                            child: factoryTwoSelection(),
...
