...
  );
}

Container statusOne() {
  String noDate = '--:--';
  return Container(
    key: Key('statusOne'),
    decoration: BoxDecoration(
      borderRadius: BorderRadius.circular(20),
      color: Color.fromARGB(255, 232, 232, 232),
      boxShadow: [
        BoxShadow(
          color: Colors.grey.withOpacity(0.5),
...
}

Container statusTwo() {
  DateTime now = DateTime.now();
  String formattedDate = DateFormat('yyyy-MM-dd  kk:mm:ss').format(now);
  return Container(
    key: Key('statusTwo'),
    decoration: BoxDecoration(
      borderRadius: BorderRadius.circular(20),
      color: Color.fromARGB(255, 232, 232, 232),
      boxShadow: [
        BoxShadow(
          color: Colors.grey.withOpacity(0.5),
...
