...
    ),
  );
}

Widget status() {
  return Container(
    key: Key('status'),
    decoration: BoxDecoration(
      borderRadius: BorderRadius.circular(20),
      color: Color.fromARGB(255, 232, 232, 232),
      boxShadow: [
        BoxShadow(
          color: Colors.grey.withOpacity(0.5),
...
